# streamlit-mermaid-interactive

./: .pre-commit-config.yml  README.md  package.json  pyproject.toml  streamlit_app.py  vite.config.js
.github/workflows/: publish.yml
src/streamlit_mermaid_interactive/: __init__.py  pyproject.toml
src/streamlit_mermaid_interactive/frontend/: component.js  main.js
tests/: test_smoke.py
