[project]
name = "streamlit-mermaid-interactive"
version = "0.1.8"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zachary Blackwood", email = "zachary.blackwood@snowflake.com" },
]
requires-python = ">=3.10"
dependencies = ["streamlit>=1.51"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.1"]
